--- a/customers/src/cart/cart.html
+++ b/customers/src/cart/cart.html
@@ -50,7 +50,7 @@
   <body>
     <header>
       <nav class="phoneNav container navbar navbar-expand-lg">
-        <a class="navbar-brand" href="../../index.html">CyberToys</a>
+        <a class="navbar-brand" href="../../../index.html">CyberToys</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -68,7 +68,7 @@
         <div class="collapse navbar-collapse" id="phoneNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="../../index.html">Home</a>
+              <a class="nav-link" href="../../../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -83,7 +83,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./src/cart/cart.html">
+              <a class="nav-link" href="./customers/src/cart/cart.html">
                 <i class="fa fa-shopping-cart fa-lg"></i>
               </a>
             </li>
