--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     />
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="./../assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
 
     <style>
       .loader {
@@ -71,7 +71,7 @@
 
     <header>
       <nav class="phoneNav container navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">CyberToys</a>
+        <a class="navbar-brand" href="#">CyberPhone</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -104,7 +104,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./src/cart/cart.html">
+              <a class="nav-link" href="./customers/src/cart/cart.html">
                 <i class="fa fa-shopping-cart fa-lg"></i>
               </a>
             </li>
@@ -117,7 +117,7 @@
         <div class="row">
           <div class="col-12 col-md-6 d-flex align-items-center">
             <div>
-              <h1>CyberToys</h1>
+              <h1>CyberPhone/h1>
               <h3>Best Toys of 2021!</h3>
               <p>
                 Cras tortor mi, lobortis quis ornare in, varius scelerisque
@@ -219,8 +219,10 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="./src/models/product.js"></script>
-    <script src="./src/services/api.js"></script>
-    <script src="./src/controller/index.js"></script>
+    
+    <script src="./customers/src/models/product.js"></script>
+    <script src="./customers/src/services/api.js"></script>
+     <script src="./customers/src/controller/index.js"></script>
+   
   </body>
 </html>
